samples/_failures_safe/1761091176_db64b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f7397e1.c: In function ‘main’:
./samples/SAFE/__tmp_9f7397e1.c:180:19: error: expected ‘]’ at end of input
  180 |     char input[102
      |                   ^
      |                   ]
./samples/SAFE/__tmp_9f7397e1.c:180:5: error: expected declaration or statement at end of input
  180 |     char input[102
      |     ^~~~
